# RobotClassDesign

./: .gitignore  README.md  frames.gv  my_nav.sh
devel/: .catkin
devel/include/astra_camera/: AstraConfig.h  UVCCameraConfig.h
devel/include/riki_msgs/: Arm.h  Battery.h  Blue_connect.h  Bluetooth.h  Buzzer.h  DHT22.h  FaceVoiceSet.h  FaceVoiceSetRequest.h  FaceVoiceSetResponse.h  Gripper.h  GripperRequest.h  GripperResponse.h  Imu.h  Infrared.h  Led.h  PID.h  Pose.h  PoseRequest.h  PoseResponse.h  RcMode.h  RobotVoiceCtrl.h  RobotVoiceCtrlRequest.h  RobotVoiceCtrlResponse.h  Servo.h  ServoAngle.h  ServoAngleRequest.h  ServoAngleResponse.h  Shoot.h  ShootRequest.h  ShootResponse.h  Sonar.h  Trajectory.h  TrajectoryRequest.h  TrajectoryResponse.h  Ultrasonic.h  Velocities.h  ps2_value.h
devel/include/yolov8_ros_msgs/: BoundingBox.h  BoundingBoxes.h
src/all_tasks/: CMakeLists.txt  package.xml
src/my_nav/: CMakeLists.txt  global_planner_plugin.xml  my_planner_plugin.xml  package.xml
src/rikibot/: CMakeLists.txt  package.xml
src/rikibot_follower/: CMakeLists.txt  package.xml
src/rikibot_follower/launch/: follower.launch
src/rikibot_follower/src/: follower.cpp
src/rikibot_gazebo/: CMakeLists.txt  package.xml
src/rikibot_object_detect/: CMakeLists.txt  package.xml
src/rikibot_yolov8/rikibot_yolov8/: CMakeLists.txt  package.xml
src/rikibot_yolov8/rikibot_yolov8/launch/: rikibot_traffic.launch  rikibot_yolov8.launch
src/rikibot_yolov8/rikibot_yolov8/node/: yolov8_node.py
src/rikibot_yolov8/rikibot_yolov8/node/ultralytics/utils/: checks.py
(+293 files in other folders)
