<package>
  <name>rikibot_follower</name>
  <version>2.3.7</version>
  <description>
       Follower for the rikibot. Follows humans and robots around by following the centroid of a box points in front of the rikibot.
  </description>

  <maintainer email="304050118@qq.com">kevin</maintainer>

  <license>BSD</license>

  <author email="304050118@qq.com">kevin</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>depth_image_proc</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>roscpp</run_depend>

</package>
