<?xml version="1.0"?>
<package format="2">
  <name>rikibot_yolov8</name>
  <version>1.1.0</version>
  <description>The rikibot yolov8 package</description>

  <maintainer email="304050118@qq.com">kevin</maintainer>

  <license>APLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
